# CC7515-Tarea2

./: .gitignore  CMakeLists.txt  Makefile  README.md  Testing.py
experiment/: cl.csv  cpu.csv  cuda.csv  exp.ipynb
experiment/.ipynb_checkpoints/: exp-checkpoint.ipynb
src/: CMakeLists.txt  kernel.cpp  kernel.h  main.cpp  utils.cpp  utils.h
src/cl/: CMakeLists.txt  kernel.cl  kernel.h  kernel_shared.cl  main.cpp
src/cuda/: CMakeLists.txt  kernel.cu  kernel.cuh  kernel_shared.cu  kernel_shared.cuh  main.cu  main_test.cu
