set(CL_SOURCES main.cpp)
set(CL_KERNEL ${CMAKE_CURRENT_SOURCE_DIR}/kernel.cl)
set(CL_VERSION ${OpenCL_VERSION_MAJOR}${OpenCL_VERSION_MINOR}0)

add_executable(${PROJECT_NAME}CL ${CL_SOURCES})
target_link_libraries(${PROJECT_NAME}CL PRIVATE ${OpenCL_LIBRARY})
target_include_directories(${PROJECT_NAME}CL PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_compile_definitions(${PROJECT_NAME}CL PRIVATE CL_HPP_TARGET_OPENCL_VERSION=${CL_VERSION} CL_HPP_MINIMUM_OPENCL_VERSION=${CL_VERSION})
